--- a/be/test/CMakeLists.txt
+++ b/be/test/CMakeLists.txt
@@ -54,41 +54,49 @@ list(REMOVE_ITEM UT_FILES
     ${CMAKE_CURRENT_SOURCE_DIR}/olap/remote_rowset_gc_test.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/runtime/jsonb_value_test.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/runtime/large_int_value_test.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/olap/delete_handler_test.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/olap/rowset/segment_v2/inverted_index/query_v2/query_test.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/olap/rowset/segment_v2/inverted_index/compaction/index_compaction_write_index_test.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/olap/rowset/segment_v2/inverted_index/compaction/index_compaction_performance_test.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/olap/rowset/segment_v2/inverted_index/compaction/index_compaction_test.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/olap/rowset/segment_v2/inverted_index/compaction/util/index_compaction_utils.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/vec/exec/sort/sort_test.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/vec/jsonb/serialize_test.cpp
 )
 
-list(APPEND UT_FILES
-    ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/MemoryInputStream.cc
-    ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/MemoryOutputStream.cc
-    ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestAttributes.cc
-    ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestBlockBuffer.cc
-    ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestBufferedOutputStream.cc
-    ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestBloomFilter.cc
-    ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestByteRle.cc
-    ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestByteRLEEncoder.cc
-    ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestColumnPrinter.cc
-    ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestColumnReader.cc
-    ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestColumnStatistics.cc
-    ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestCompression.cc
-    ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestDecompression.cc
-    ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestDecimal.cc
-    ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestDictionaryEncoding.cc
-    #${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestDriver.cc
-    ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestInt128.cc
-    ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestMurmur3.cc
-    ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestPredicateLeaf.cc
-    ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestPredicatePushdown.cc
-    ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestReader.cc
-    ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestRleDecoder.cc
-    ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestRleEncoder.cc
-    ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestRLEV2Util.cc
-    ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestSargsApplier.cc
-    ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestSearchArgument.cc
-    ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestStripeIndexStatistics.cc
-    ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestTimestampStatistics.cc
-    ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestTimezone.cc
-    ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestType.cc
-    ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestWriter.cc
-)
+# list(APPEND UT_FILES
+#     ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/MemoryInputStream.cc
+#     ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/MemoryOutputStream.cc
+#     ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestAttributes.cc
+#     ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestBlockBuffer.cc
+#     ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestBufferedOutputStream.cc
+#     ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestBloomFilter.cc
+#     ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestByteRle.cc
+#     ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestByteRLEEncoder.cc
+#     ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestColumnPrinter.cc
+#     ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestColumnReader.cc
+#     ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestColumnStatistics.cc
+#     ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestCompression.cc
+#     ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestDecompression.cc
+#     ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestDecimal.cc
+#     ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestDictionaryEncoding.cc
+#     #${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestDriver.cc
+#     ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestInt128.cc
+#     ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestMurmur3.cc
+#     ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestPredicateLeaf.cc
+#     ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestPredicatePushdown.cc
+#     ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestReader.cc
+#     ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestRleDecoder.cc
+#     ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestRleEncoder.cc
+#     ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestRLEV2Util.cc
+#     ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestSargsApplier.cc
+#     ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestSearchArgument.cc
+#     ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestStripeIndexStatistics.cc
+#     ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestTimestampStatistics.cc
+#     ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestTimezone.cc
+#     ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestType.cc
+#     ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/test/TestWriter.cc
+# )
 
 include_directories(
   ${CMAKE_SOURCE_DIR}/src/apache-orc/c++/src
